fix for the 1px gap fix, but even more work needs to be done. because of course. [#612]

--- a/src/sass/components/_hero-image.scss
+++ b/src/sass/components/_hero-image.scss
@@ -109,7 +109,7 @@
 
 	&__headline {
 		background-color: transparentize(#111215, 0.05);
-		bottom: 0;
+		bottom: 1px;
 		font-size: cr(11px);
 		left: 0;
 		padding: ce(30px, 11px) percentage(18px / 250px);
